--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
           </ul>
         </div>
       </nav>
+
+      <!-- Showcase -->
+      <section class="showcase-container">
+        <h1>The Sky Is The Limit</h1>
+        <p>We provide world class financial assistance</p>
+        <a href="#about" class="btn btn-primary">Read More</a>
+      </section>
     </header>
   </body>
 </html>
