--- a/index.html
+++ b/index.html
@@ -14,32 +14,28 @@
     <link rel="stylesheet" href="css/main.css" />
     <title>Edge Ledger | Welcome</title>
   </head>
-  <body>
-    <header class="header">
+  <body id="home">
+    <header class="hero">
       <!-- Navigation -->
-      <nav class="navigation">
-        <div class="container">
-          <h1 class="logo">
-            <span class="text-primary"
-              ><i class="fas fa-book-open fa-2x"></i> Edge</span
-            >Ledger
-          </h1>
-          <ul class="nav">
+      <div id="navbar" class="navbar">
+        <span class="text-primary"><h1 class="logo"><i class="fas fa-book-open"></i> Edge</span>Ledger</h1>
+        <nav>
+          <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#cases">Cases</a></li>
             <li><a href="#blog">Blog</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
-        </div>
-      </nav>
+        </nav>
+      </div>
 
-      <!-- Showcase -->
-      <section class="showcase-container">
+      <!-- Content -->
+      <div class="content">
         <h1>The Sky Is The Limit</h1>
         <p>We provide world class financial assistance</p>
-        <a href="#about" class="btn btn-primary">Read More</a>
-      </section>
+        <a href="#about" class="btn"><i class="fas fa-chevron-right"></i> Read More</a>
+      </div>
     </header>
   </body>
 </html>
