--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <header class="hero">
       <!-- Navigation -->
       <div id="navbar" class="navbar">
-        <span class="text-primary"><h1 class="logo"><i class="fas fa-book-open"></i> Edge</span>Ledger</h1>
+        <h1 class="logo">
+          <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span
+          >Ledger
+        </h1>
         <nav>
           <ul>
             <li><a href="#home">Home</a></li>
@@ -34,7 +37,9 @@
       <div class="content">
         <h1>The Sky Is The Limit</h1>
         <p>We provide world class financial assistance</p>
-        <a href="#about" class="btn"><i class="fas fa-chevron-right"></i> Read More</a>
+        <a href="#about" class="btn"
+          ><i class="fas fa-chevron-right"></i> Read More</a
+        >
       </div>
     </header>
   </body>
