--- a/index.html
+++ b/index.html
@@ -105,6 +105,62 @@
           </div>
         </div>
       </section>
+
+      <!-- Cases -->
+      <section id="cases" class="cases flex-grid section-padding">
+        <header class="section-header">
+          <h4>This is what we do</h4>
+          <h2>Business Cases</h2>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam,
+            iusto!
+          </p>
+        </header>
+        <div class="row">
+          <div class="column">
+            <img src="img/cases/cases1.jpg" alt="" />
+            <img src="img/cases/cases2.jpg" alt="" />
+          </div>
+          <div class="column">
+            <img src="img/cases/cases3.jpg" alt="" />
+            <img src="img/cases/cases4.jpg" alt="" />
+          </div>
+          <div class="column">
+            <img src="img/cases/cases5.jpg" alt="" />
+            <img src="img/cases/cases6.jpg" alt="" />
+          </div>
+          <div class="column">
+            <img src="img/cases/cases7.jpg" alt="" />
+            <img src="img/cases/cases8.jpg" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <!-- Blog -->
+      <section id="blog" class="blog flex-columns flex-reverse">
+        <div class="row">
+          <div class="column">
+            <div class="column-1">
+              <img src="img/home/blog.jpg" alt="" />
+            </div>
+          </div>
+          <div class="column">
+            <div class="column-2 bg-secondary">
+              <h4>April 15, 2020</h4>
+              <h2>Blog Post One</h2>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Perferendis eius non expedita, corporis distinctio saepe ipsa
+                magnam cum porro dolorem neque nostrum natus facere dignissimos?
+                Quis pariatur a molestias illo.
+              </p>
+              <a href="#" class="btn btn-outline"
+                ><i class="fas fa-chevron-right"></i> Read Our Blog</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
