--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 magnam cum porro dolorem neque nostrum natus facere dignissimos?
                 Quis pariatur a molestias illo.
               </p>
-              <a href="#" class="btn btn-outline"
+              <a href="blog.html" class="btn btn-outline"
                 ><i class="fas fa-chevron-right"></i> Read Our Blog</a
               >
             </div>
