--- a/post.html
+++ b/post.html
@@ -35,7 +35,7 @@
 
       <!-- Content -->
       <div class="content">
-        <h1>Blog</h1>
+        <h1>Post One</h1>
         >
       </div>
     </header>
