--- a/index.html
+++ b/index.html
@@ -118,20 +118,20 @@
         </header>
         <div class="row">
           <div class="column">
-            <img src="img/cases/cases1.jpg" alt="" />
-            <img src="img/cases/cases2.jpg" alt="" />
+            <img src="img/cases/cases1.jpg" alt="Cases 1" />
+            <img src="img/cases/cases2.jpg" alt="Cases 2" />
           </div>
           <div class="column">
-            <img src="img/cases/cases3.jpg" alt="" />
-            <img src="img/cases/cases4.jpg" alt="" />
+            <img src="img/cases/cases3.jpg" alt="Cases 3" />
+            <img src="img/cases/cases4.jpg" alt="Cases 4" />
           </div>
           <div class="column">
-            <img src="img/cases/cases5.jpg" alt="" />
-            <img src="img/cases/cases6.jpg" alt="" />
+            <img src="img/cases/cases5.jpg" alt="Cases 5" />
+            <img src="img/cases/cases6.jpg" alt="Cases 6" />
           </div>
           <div class="column">
-            <img src="img/cases/cases7.jpg" alt="" />
-            <img src="img/cases/cases8.jpg" alt="" />
+            <img src="img/cases/cases7.jpg" alt="Cases 7" />
+            <img src="img/cases/cases8.jpg" alt="Cases 8" />
           </div>
         </div>
       </section>
