finish blog.html

--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
     </header>
 
     <main>
-      <!-- Blog Posts -->
+      <!-- Blog Post One -->
       <article class="flex-columns">
         <div class="row">
           <div class="column">
@@ -60,9 +60,61 @@
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
                 illum, animi earum ea amet sequi reiciendis sit corporis sunt
               </p>
-              <a href="#" class="btn btn-dark"
+              <a href="post.html" class="btn btn-dark"
                 ><i class="fas fa-chevron-right"></i> Read More</a
               >
+            </div>
+          </div>
+        </div>
+      </article>
+      <!-- Blog Post Two -->
+      <article class="flex-columns flex-reverse">
+        <div class="row">
+          <div class="column">
+            <div class="column-1">
+              <img src="img/blog/blog2.jpg" alt="" />
+            </div>
+          </div>
+          <div class="column">
+            <div class="column-2 bg-dark">
+              <h2>Blog Post One</h2>
+              <p class="meta">
+                <i class="fas fa-user"></i> Posted by
+                <strong>John Doe</strong> | April 19 2020
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+                illum, animi earum ea amet sequi reiciendis sit corporis sunt
+              </p>
+              <a href="post.html" class="btn btn-light"
+                ><i class="fas fa-chevron-right"></i> Read More</a
+              >
+            </div>
+          </div>
+        </div>
+      </article>
+      <!-- Blog Post Three -->
+      <article class="flex-columns">
+        <div class="row">
+          <div class="column">
+            <div class="column-1">
+              <img src="img/blog/blog3.jpg" alt="" />
+            </div>
+          </div>
+          <div class="column">
+            <div class="column-2 bg-light">
+              <h2>Blog Post Three</h2>
+              <p class="meta">
+                <i class="fas fa-user"></i> Posted by
+                <strong>John Doe</strong> | April 19 2020
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+                illum, animi earum ea amet sequi reiciendis sit corporis sunt
+              </p>
+              <a href="post.html" class="btn btn-dark">
+                <i class="fas fa-chevron-right"></i> Read More
+              </a>
             </div>
           </div>
         </div>
