--- a/post.html
+++ b/post.html
@@ -17,7 +17,7 @@
   <body id="home">
     <header class="hero blog">
       <!-- Navigation -->
-      <div id="navbar" class="navbar">
+      <div id="navbar" class="navbar top">
         <h1 class="logo">
           <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span
           >Ledger
@@ -81,5 +81,27 @@
       </div>
       <p>&copy; 2022 Edge Ledger. All rights reserved.</p>
     </footer>
+
+    <script>
+      const navbar = document.getElementById('navbar');
+
+      let scrolled = false;
+
+      window.onscroll = function () {
+        if (window.pageYOffset > 100) {
+          navbar.classList.remove('top');
+          if (!scrolled) {
+            navbar.style.transform = 'translateY(-70px)';
+          }
+          setTimeout(function () {
+            navbar.style.transform = 'translateY(0)';
+            scrolled = true;
+          }, 200);
+        } else {
+          navbar.classList.add('top');
+          scrolled = false;
+        }
+      };
+    </script>
   </body>
 </html>
